--- a/system/modules/piwik_visitor_optout/templates/contao_piwik_visitor_optout.xhtml
+++ b/system/modules/piwik_visitor_optout/templates/contao_piwik_visitor_optout.xhtml
@@ -1,1 +1,13 @@
-<iframe frameborder="no" height="200px" src="/index.php?module=CoreAdminHome&amp;action=optOut"></iframe>
+<!-- indexer::stop -->
+<?php if( $this->piwik_visitor_optout_url ): ?>
+<div class="<?php echo $this->class; ?> block"<?php echo $this->cssID; ?><?php if ($this->style): ?> style="<?php echo $this->style; ?>"<?php endif; ?>>
+	
+	<?php if ($this->headline): ?>
+	<<?php echo $this->hl; ?>><?php echo $this->headline; ?></<?php echo $this->hl; ?>>
+	<?php endif; ?>
+	
+	<iframe frameborder="no" style="width:100%; height:200px" src="<?php echo $this->piwik_visitor_optout_url ?>index.php?module=CoreAdminHome&amp;action=optOut"></iframe>
+	
+</div>
+<?php endif; ?>
+<!-- indexer::continue -->
